[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Projectiles/Entities/enproj2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Mobs/Unit50/missile.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 5png.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 8.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 9.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 11.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 12.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 13.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 14.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 15.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 16.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 17.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 18.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 19.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Mobs/Unit50/Mark 20.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Other/image.axd.png" type="Texture" id=22]
[ext_resource path="res://Sons/lauchunit.wav" type="AudioStream" id=23]
[ext_resource path="res://Sons/Explo4.wav" type="AudioStream" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "explode",
"speed": 45.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 3.77755

[sub_resource type="CircleShape2D" id=3]
radius = 3.07701

[sub_resource type="CircleShape2D" id=4]
radius = 27.6199

[node name="soldier" type="KinematicBody2D"]
collision_layer = 34
collision_mask = 5
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )
playing = true

[node name="veg" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.0267747, 0.056822 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="boulpos" type="Position2D" parent="."]
position = Vector2( 0.0417964, 0.0117511 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.462745, 0.462745, 0.427451 )
self_modulate = Color( 1, 0.388235, 0.388235, 0.705882 )
position = Vector2( -0.0141201, -0.0939682 )
scale = Vector2( 0.0541861, 0.0519766 )
texture = ExtResource( 22 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 3 )

[node name="explode" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="active" type="Timer" parent="."]

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )

[node name="SoundHit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="active" to="." method="_on_active_timeout"]
